fixed bug: existing tweets sticks together without a gap

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,7 +27,6 @@ body {
 
  main {
   width: 450px;
-  height: 900px;
   margin: 140px auto 0;
   background-color: #ffffff;
 
